ros2_ws/log/build_2024-01-03_22-28-03/mypkg/stderr.log
  File "/home/rosel/mypkg/ros2_ws/install/mypkg/lib/python3.8/site-packages/mypkg/talker.py", line 13
    10 def cb():          #17行目で定期実行されるコールバック関数
       ^
SyntaxError: invalid syntax

